--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
 <head>
 <Title> Christopher Rackey’s Resume </title>
 <meta charset="utf-8" /> 
-<link href="rackeyassignment1stylesheet.css" rel="rackeystylesheet" />
+<link href="rackeyassignment1stylesheet.css" rel="stylesheet" />
 </head>
 
 <body>
