errors involving p, trying again

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<Title> Christopher Rackey’s Resume </title>
+<title> Christopher Rackey’s Resume </title>
 <meta charset="utf-8" /> 
 <link href="rackeyassignment1stylesheet.css" rel="stylesheet" />
 </head>
@@ -20,57 +20,56 @@ Relevant Coursework: Basic Econometrics, Statistics, Financial Accounting, Macro
 
 
 <h3>Professional Experience</h3>
-<p>Wayfair <br>
+Wayfair <br>
 Business Analyst Intern
 <ul>
 	<li>Coordinated with Engineering, Operations, and other teams</li>
 	<li>Created database to store 600+ shipping lanes and 1200+ shipping rates</li>
 	<li>Produced UI providing useful decision-making information to end user</li> 
 </ul>
-</p>
-<p> State Street <br>
+
+State Street <br>
 Industry Research Analyst
 <ul>
 	<li>Researched domestic operations of China's mobile payment industry</li>
 	<li>Created SWOT analysis of Ant Financial's Alipay adn Tencent's WeChat Pay</li>
 	<li>Gave final presentation in front of company employees (November 30th 2017)</li>
 </ul>
-</p>
-<p> Lenny and Joe's Fish Tale<br>
+
+Lenny and Joe's Fish Tale<br>
 Cashier
 <ul>
 	<li>Balanced multiple customer requests</li>
 	<li>Managed dining room inventory</li> 
 </ul>
-</p>
+
 <h4>Skills and Interests</h4>
-<p>Word, Excel, Powerpoint, Access, C++, HTML, CSS, Stata, SQL</p> 
-<p>Tea, EDM, Hot Sauces</p>
+Word, Excel, Powerpoint, Access, C++, HTML, CSS, Stata, SQL <br> 
+Tea, EDM, Hot Sauces
 
 <h4>Activities</h4>
-<p> Tufts Consulting Collective<br>
+Tufts Consulting Collective<br>
 Project Manager 
 <ul>
 	<li>Researched desired demographics for a sustainable fashion start-up</li>
 	<li>Worked with a group of four to make suggestions for target cities</li>
 	<li>Sorted through data to create pricing stratgey recommendations</li>
 </ul>
-</p>
-<p> Tufts Financial Group<br>
+Tufts Financial Group<br>
 Analyst 
 <ul>
 	<li>Audited Net Asset Value model used to pitch Franco Nevada</li>
 	<li>Participated in stock pitch competition in team of two,  pitched IFF </li>
 	<li>Talked about management team during Anthem Inc. pitch</li>
 </ul>
-</p>
-<p> Tufts Anime Brigade<br>
+
+Tufts Anime Brigade<br>
 Treasurer 
 <ul>
 	<li>Negotiated for funds to send six students to Anime Boston</li>
 	<li>Organized meetings and events</li>
 </ul>
-</p>
+
 
 </body>
 </html>
