should be error free now, bio was, checking for resume

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<title> Christopher Rackey’s Resume </title>
+<title> Christopher Rackey Resume </title>
 <meta charset="utf-8" /> 
 <link href="rackeyassignment1stylesheet.css" rel="stylesheet" />
 </head>
